<resources>
    <string name="app_name">Awarify</string>
    <string name="share">Share</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="like">Like</string>
    <string name="todo">TODO</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="render_images">Render Images</string>
    <string name="data">livemint</string>
    <string name="userpref">com.example.networkingpr.userpreferences</string>
    <string name="Search">Search</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="action_sign_in">Sign In</string>
    <string name="Signout">Sign Out</string>
    <string name="home">Home</string>
    <string name="user_profile">User Profile</string>
    <string name="explore">Explore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="retype_password">Retype password</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="delete_account">Delete Account</string>
</resources>